# termini

./: .gitignore  CONTRIBUTORS.rst  LICENSE  MANIFEST.in  README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-request.yml
notebooks/: Termini.ipynb
termini/: __init__.py  api.py  utilities.py  version.py
