[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "termini"
version = "0.0.1"
description = "Interactive visualization tool for the NASA MEaSUREs Terminus products"
keywords = [
    "glaciers",
    "ice fronts",
    "termini",
    "ipython",
    "jupyter",
    "graphics",
]

authors = [
    {name = "Tyler Sutterley"},
    {name = "Taryn Black"},
    {email = "tsutterl@uw.edu"}
]
maintainers = [{ name = "termini contributors" }]
license = {file = "LICENSE"}
readme = "README.rst"

requires-python = "~=3.9"
dependencies = [
    "geopandas",
    "ipywidgets",
    "ipyleaflet",
    "jupyterlab",
    "matplotlib",
    "numpy"
]

classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Physics",
]

[project.urls]
Repository = "https://github.com/tsutterley/termini"

[tool.setuptools.packages.find]
exclude = ["test*", "run*"]

[tool.pixi.workspace]
name = "termini"
authors = ["termini contributors"]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
termini = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }

[tool.pixi.tasks.start]
cmd = "jupyter lab"
cwd = "notebooks"
description = "Start JupyterLab in the notebooks directory"

[tool.pixi.tasks.export-env]
args = [ { "arg" = "flags", "default" = "" } ]
cmd = "pixi workspace export conda-environment {{ flags }} > environment.yml"
description = "Export workspace to a conda environment file" 

[tool.pixi.tasks.fetch]
cmd = "python -c 'import termini; termini.utilities.download_resources()'"
description = "Fetch terminus data"

[tool.pixi.dependencies]
geopandas = "*"
ipyleaflet = "*"
ipywidgets = "*"
jupyterlab = "*"
matplotlib-base = "*"
numpy = "*"
